// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`code-toggle Java preferred (not interactive) renders as expected 1`] = `
<div
  className="relative "
>
  <fieldset>
    <div
      aria-required={true}
      className="toggle-group round-full bg-blue py3 px3"
      data-test="three-input"
      id="three"
      role="radiogroup"
    >
      <label
        className="toggle-container "
      >
        <input
          autoFocus={false}
          checked={false}
          name="three"
          onChange={[Function]}
          type="radio"
          value="javascript"
        />
        <div
          className="txt-s py3 toggle--white toggle--active-blue toggle"
        >
          JavaScript
        </div>
      </label>
      <label
        className="toggle-container "
      >
        <input
          autoFocus={false}
          checked={true}
          name="three"
          onChange={[Function]}
          type="radio"
          value="java"
        />
        <div
          className="txt-s py3 toggle--white toggle--active-blue toggle"
        >
          Java
        </div>
      </label>
      <label
        className="toggle-container "
      >
        <input
          autoFocus={false}
          checked={false}
          name="three"
          onChange={[Function]}
          type="radio"
          value="swift"
        />
        <div
          className="txt-s py3 toggle--white toggle--active-blue toggle"
        >
          Swift
        </div>
      </label>
      <label
        className="toggle-container "
      >
        <input
          autoFocus={false}
          checked={false}
          name="three"
          onChange={[Function]}
          type="radio"
          value="objectiveC"
        />
        <div
          className="txt-s py3 toggle--white toggle--active-blue toggle"
        >
          Objective-C
        </div>
      </label>
    </div>
  </fieldset>
  <div
    role="alert"
  />
</div>
`;

exports[`code-toggle Objective C preferred (not interactive) renders as expected 1`] = `
<div
  className="relative "
>
  <fieldset>
    <div
      aria-required={true}
      className="toggle-group round-full bg-blue py3 px3"
      data-test="two-input"
      id="two"
      role="radiogroup"
    >
      <label
        className="toggle-container "
      >
        <input
          autoFocus={false}
          checked={false}
          name="two"
          onChange={[Function]}
          type="radio"
          value="swift"
        />
        <div
          className="txt-s py3 toggle--white toggle--active-blue toggle"
        >
          Swift
        </div>
      </label>
      <label
        className="toggle-container "
      >
        <input
          autoFocus={false}
          checked={true}
          name="two"
          onChange={[Function]}
          type="radio"
          value="objectiveC"
        />
        <div
          className="txt-s py3 toggle--white toggle--active-blue toggle"
        >
          Objective-C
        </div>
      </label>
    </div>
  </fieldset>
  <div
    role="alert"
  />
</div>
`;

exports[`code-toggle Swift preferred (interactive) renders as expected 1`] = `
<div
  className="relative "
>
  <fieldset>
    <div
      aria-required={true}
      className="toggle-group round-full bg-blue py3 px3"
      data-test="one-input"
      id="one"
      role="radiogroup"
    >
      <label
        className="toggle-container "
      >
        <input
          autoFocus={false}
          checked={true}
          name="one"
          onChange={[Function]}
          type="radio"
          value="swift"
        />
        <div
          className="txt-s py3 toggle--white toggle--active-blue toggle"
        >
          Swift
        </div>
      </label>
      <label
        className="toggle-container "
      >
        <input
          autoFocus={false}
          checked={false}
          name="one"
          onChange={[Function]}
          type="radio"
          value="objectiveC"
        />
        <div
          className="txt-s py3 toggle--white toggle--active-blue toggle"
        >
          Objective-C
        </div>
      </label>
    </div>
  </fieldset>
  <div
    role="alert"
  />
</div>
`;
